MathScript/src/mathscriptV1.bnf
// basic definitions
<Statement>		::= <Expression> { ';' <Statement> }
<Expression> 	::= [ <opSum> ] <Product> { <opSum> <Product> }
<Product> 		::= <Factor> { <opProduct> <Factor> } 
<Factor>		::= <Literal> { <opExponent> <Literal> }
<Literal> 		::= ( <Number> | <Symbol> | '(' <Expression ')' ) // [ <PostFix> ] 
<Symbol>		::= <Constant> 
<Constant>		::= e | pi 
//<Postfix>		::= '!'

// types
<Number>		::= <Decimal> | <Integer> 
<Decimal> 		::= ( <Integer> '.' { <Digit> }) | <Integer> e [ <opSum> ] <Integer> 
<Integer>		::= ( ( ( 1 | ... | 9 ) { <Digit> } ) | 0 ) 
<Digit>			::= 0 | ... | 9 
<LegalChar>		::= a | ... | z | A | ... | Z | ' | # | ...

//operators and special character
<opDefinition> 	::= ':''='
<opSum> 		::=	'+' | '-' 
<opProduct>		::= '*' | '/'
//<opRelation>	::= '=' | '<' | '<''=' | '>''=' | '>' 
//<opNot>			::= '!'
<opExponent>	::= '^'
